--- a/styles/_config.scss
+++ b/styles/_config.scss
@@ -10,3 +10,15 @@
   margin: 0 auto;
   padding: 0 16px;
 }
+
+ul{
+ list-style-type: none;
+}
+
+a{
+    text-decoration: none;
+}
+
+html{
+  background-color: #fffcec;
+}
