--- a/styles/_config.scss
+++ b/styles/_config.scss
@@ -8,5 +8,8 @@
   width: 100%;
   max-width: 1208px;
   margin: 0 auto;
-  padding: 0 16px;
+  // @media .container {max-width:768px;
+  //   max-width: 768px;
+    
+  // }
 }
