--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -176,7 +176,7 @@
 .supernav {
   background-color: white;
   height: 210px;
-   z-index: -900;
+  z-index: -900;
   position: absolute;
   left: 0;
   width: 100vw;
@@ -184,35 +184,34 @@
   transition: 0.4s;
   transform: translateY(-100%);
   box-shadow: none;
- 
-  &__wrapper{
-    display: flex;
-  justify-content: space-between;
-  }
-&__list {
-  margin-top: 25px;
-  font-size: 16px;
-  font-family: "Rubik", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-weight: bold;
-  color: black;
 
-  &:hover {
-    color: orangered;
+  &__wrapper {
+    display: flex;
+    justify-content: space-between;
   }
-}
+  &__list {
+    margin-top: 25px;
+    font-size: 16px;
+    font-family: "Rubik", system-ui, -apple-system, BlinkMacSystemFont,
+      "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+      "Helvetica Neue", sans-serif;
+    font-weight: bold;
+    color: black;
+
+    &:hover {
+      color: orangered;
+    }
+  }
 }
 
 .main {
   margin-top: 4px;
-  position: fixed;
   width: 100%;
   z-index: -999;
-  background-color: white;
   background-image: url(../src/images/group.svg);
   background-repeat: no-repeat;
   background-size: 100%;
-
+  background-color: rgba(251, 248, 236, 1);
   &__info {
     display: flex;
     justify-content: space-evenly;
