--- a/styles/_config.scss
+++ b/styles/_config.scss
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Rubik";
 }
 
 .container {
@@ -9,17 +10,19 @@
   max-width: 1208px;
   margin: 0 auto;
   padding: 0 16px;
-  @media screen and (max-width: 1440px){width: 768px;}
+  @media screen and (max-width: 1440px) {
+    width: 768px;
+  }
 }
 
-ul{
- list-style-type: none;
+ul {
+  list-style-type: none;
 }
 
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
 
-html{
+html {
   background-color: #fffcec;
 }
