--- a/styles/_offers.scss
+++ b/styles/_offers.scss
@@ -1,5 +1,3 @@
-
-
 .offers__cards {
   display: flex;
   justify-content: space-between;
@@ -41,8 +39,8 @@ h3 {
   text-shadow: 1px 1px 1em black;
 }
 
-p {
-  font-family: Rubik;
+.offers__card p {
+  font-family: "Rubik";
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
@@ -83,7 +81,7 @@ h2 {
   font-family: "Rubik";
 }
 
-input {
+.map input {
   margin-top: 44px;
   padding: 4px 8px;
   font-family: Rubik;
@@ -99,4 +97,3 @@ input {
 .styled__colored {
   background-color: #70c05b;
 }
-
