--- a/styles/_artical.scss
+++ b/styles/_artical.scss
@@ -63,41 +63,40 @@
   }
   &__art {
     width: 376px;
-    height: 162px;
+
     @media screen and (max-width: 1440px) {
       width: 224px;
-      height: 162px;
     }
   }
   &__page {
     width: 356px;
-    height: 18px;
+
     margin: 10px;
     color: #727272;
     font-size: 12px;
     @media screen and (max-width: 1440px) {
       width: 204px;
-      height: 12px;
+
       font-size: 8px;
     }
   }
   &__title {
     color: #414141;
     width: 356px;
-    height: 54px;
+
     font-weight: 700;
     font-size: 18px;
     margin: 10px;
     @media screen and (max-width: 1440px) {
       width: 204px;
-      height: 72px;
+
       font-size: 16px;
     }
   }
   &__description {
     font-family: Rubik;
     width: 356px;
-    height: 92px;
+    height: 96px;
     font-weight: 300;
     line-height: 24px;
     font-size: 15px;
@@ -117,9 +116,19 @@
     background-color: #e5ffde;
     margin-left: 10px;
     transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+
     &__button:hover {
       color: #fff;
       background-color: #70c05b;
     }
   }
+  &__desbut {
+    display: flex;
+    flex-direction: column;
+    @media screen and (max-width: 1440px) {justify-content: space-between;
+    height: 200px;}
+  }
+  &__btn{margin-top: 20px;
+  @media screen and (max-width: 1440px){margin-top: 68px;}}
 }
+
