--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -14,21 +14,27 @@ footer {
     width: 1209px;
     height: 78px;
     @media screen and (max-width: 1440px) {
-      width: 736px;
-      height: 56px;
-      margin: 32px 16px 36px;
+      display: grid;
+      grid-template-columns: 64px 311px 56px 152px;
+      width: 768px;
+      height: 124px;
     }
   }
 
   &__logo {
     width: 64px;
     height: 44px;
-    
+    @media screen and (max-width: 1440px) {
+      width: 64px;
+      height: 24px;
+    }
   }
+
   &__a {
     text-decoration: none;
     color: #414141;
   }
+
   &__menu {
     display: flex;
   }
@@ -36,15 +42,16 @@ footer {
     margin-right: 110px;
     width: 740px;
     height: 44px;
-    
   }
   &__list {
     list-style: none;
     font-size: 12px;
     display: flex;
     justify-content: space-between;
-    @media screen and (max-width: 1440px){width: 415px;
-    height: 44px;}
+    @media screen and (max-width: 1440px) {
+      width: 415px;
+      height: 44px;
+    }
   }
   &__right {
     width: 336px;
