--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -13,16 +13,35 @@
   &__logo {
     display: flex;
     align-items: center;
+    gap: 8px;
   }
   &__image-logo {
-    width: 152px;
+    width: 32px;
     height: 32px;
+  }
+  &__logo-text {
+    font-family: "Rubik", system-ui, -apple-system, BlinkMacSystemFont,
+      "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+      "Helvetica Neue", sans-serif;
+    color: rgb(68, 68, 68);
+    font-size: 16px;
+    font-weight: bolder;
+  }
+  @media screen and (max-width: 768px) {
+    &__logo-text {
+      display: none;
+    }
   }
 
   &__catalog {
     display: flex;
     align-items: center;
     position: relative;
+  }
+  @media screen and (max-width: 360px) {
+    &__catalog {
+      display: none;
+    }
   }
 
   &__catalog-menu {
@@ -52,6 +71,15 @@
     color: white;
     font-size: 16px;
   }
+  @media screen and (max-width: 768px) {
+    &__catalog-text {
+      display: none;
+    }
+    &__link-catalog {
+      width: 40px;
+      height: 40px;
+    }
+  }
 
   &__searching {
     display: flex;
@@ -63,15 +91,35 @@
     border-radius: 5px;
     border: 1px solid #70c05b;
     padding: 0 5px 0 10px;
+    position: relative;
 
     &:focus {
       outline: 2px solid #70c05b;
+    }
+  }
+  &__loopa{
+    margin-left: 340px;
+    position: absolute;
+  }
+  @media screen and (max-width: 768px) {
+    &__loopa {
+      margin-left: 290px;
+    }
+  }
+  @media screen and (max-width: 360px) {
+    &__loopa {
+      margin-left: 230px;
     }
   }
 
   &__nav {
     display: flex;
     align-items: center;
+  }
+  @media screen and (max-width: 360px) {
+    &__nav {
+      display: none;
+    }
   }
   &__unlist {
     display: flex;
@@ -101,7 +149,7 @@
     font-family: "Rubik", system-ui, -apple-system, BlinkMacSystemFont,
       "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
       "Helvetica Neue", sans-serif;
-    color: black;
+    color: rgb(68, 68, 68);
     font-size: 14px;
 
     &:hover {
@@ -114,11 +162,32 @@
     align-items: center;
     gap: 8px;
   }
+  @media screen and (max-width: 360px) {
+    &__user {
+      display: none;
+    }
+  }
   &__name-user {
     font-size: 16px;
     font-family: "Rubik", system-ui, -apple-system, BlinkMacSystemFont,
       "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
       "Helvetica Neue", sans-serif;
+  }
+  @media screen and (max-width: 768px) {
+    &__name-user {
+      display: none;
+    }
+    &__user-button {
+      display: none;
+    }
+    &__search-line {
+      width: 324px;
+    }
+  }
+  @media screen and (max-width: 360px) {
+    &__search-line {
+      width: 261px;
+    }
   }
 
   // Выпадающий каталог
@@ -176,7 +245,7 @@
 .supernav {
   background-color: white;
   height: 210px;
-   z-index: -900;
+  z-index: -900;
   position: absolute;
   left: 0;
   width: 100vw;
@@ -184,23 +253,29 @@
   transition: 0.4s;
   transform: translateY(-100%);
   box-shadow: none;
- 
-  &__wrapper{
-    display: flex;
-  justify-content: space-between;
-  }
-&__list {
-  margin-top: 25px;
-  font-size: 16px;
-  font-family: "Rubik", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-weight: bold;
-  color: black;
 
-  &:hover {
-    color: orangered;
+  &__wrapper {
+    display: flex;
+    justify-content: space-between;
   }
-}
+  @media screen and (max-width: 360px) {
+    &__wrapper {
+      display: none;
+    }
+  }
+  &__list {
+    margin-top: 25px;
+    font-size: 16px;
+    font-family: "Rubik", system-ui, -apple-system, BlinkMacSystemFont,
+      "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+      "Helvetica Neue", sans-serif;
+    font-weight: bold;
+    color: rgb(34, 34, 34);
+
+    &:hover {
+      color: orangered;
+    }
+  }
 }
 
 .main {
@@ -209,8 +284,9 @@
   width: 100%;
   z-index: -999;
   background-color: white;
-  background-image: url(../src/images/group.svg);
+  background-image: url("../src/images/group.svg");
   background-repeat: no-repeat;
+  background-size: cover;
   background-size: 100%;
 
   &__info {
@@ -225,6 +301,32 @@
       "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
       "Helvetica Neue", sans-serif;
     font-weight: bold;
-    color: black;
+    color: rgb(68, 68, 68);
+  }
+  @media screen and (max-width: 768px) {
+    & {
+      background-size: cover;
+    }
+    &__main-text {
+      font-size: 24px;
+    }
+    &__ad-image {
+      width: 198px;
+      height: 132px;
+    }
+  }
+  @media screen and (max-width: 360px) {
+    & {
+      display: flex;
+
+      justify-content: center;
+      height: 80px;
+    }
+    &__main-text{
+      font-size: 18px;
+    }
+    &__ad-image{
+      display: none;
+    }
   }
 }
