--- a/styles/style.css
+++ b/styles/style.css
@@ -38,15 +38,32 @@ html {
 .header__logo {
   display: flex;
   align-items: center;
+  gap: 8px;
 }
 .header__image-logo {
-  width: 152px;
+  width: 32px;
   height: 32px;
+}
+.header__logo-text {
+  font-family: "Rubik", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: rgb(68, 68, 68);
+  font-size: 16px;
+  font-weight: bolder;
+}
+@media screen and (max-width: 768px) {
+  .header__logo-text {
+    display: none;
+  }
 }
 .header__catalog {
   display: flex;
   align-items: center;
   position: relative;
+}
+@media screen and (max-width: 360px) {
+  .header__catalog {
+    display: none;
+  }
 }
 .header__catalog-menu {
   border-color: white;
@@ -72,6 +89,15 @@ html {
   color: white;
   font-size: 16px;
 }
+@media screen and (max-width: 768px) {
+  .header__catalog-text {
+    display: none;
+  }
+  .header__link-catalog {
+    width: 40px;
+    height: 40px;
+  }
+}
 .header__searching {
   display: flex;
   align-items: center;
@@ -82,13 +108,33 @@ html {
   border-radius: 5px;
   border: 1px solid #70c05b;
   padding: 0 5px 0 10px;
+  position: relative;
 }
 .header__search-line:focus {
   outline: 2px solid #70c05b;
 }
+.header__loopa {
+  margin-left: 340px;
+  position: absolute;
+}
+@media screen and (max-width: 768px) {
+  .header__loopa {
+    margin-left: 290px;
+  }
+}
+@media screen and (max-width: 360px) {
+  .header__loopa {
+    margin-left: 230px;
+  }
+}
 .header__nav {
   display: flex;
   align-items: center;
+}
+@media screen and (max-width: 360px) {
+  .header__nav {
+    display: none;
+  }
 }
 .header__unlist {
   display: flex;
@@ -115,7 +161,7 @@ html {
 }
 .header__name-nav {
   font-family: "Rubik", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: black;
+  color: rgb(68, 68, 68);
   font-size: 14px;
 }
 .header__name-nav:hover {
@@ -126,9 +172,30 @@ html {
   align-items: center;
   gap: 8px;
 }
+@media screen and (max-width: 360px) {
+  .header__user {
+    display: none;
+  }
+}
 .header__name-user {
   font-size: 16px;
   font-family: "Rubik", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+@media screen and (max-width: 768px) {
+  .header__name-user {
+    display: none;
+  }
+  .header__user-button {
+    display: none;
+  }
+  .header__search-line {
+    width: 324px;
+  }
+}
+@media screen and (max-width: 360px) {
+  .header__search-line {
+    width: 261px;
+  }
 }
 .header__superlist {
   width: 24px;
@@ -191,12 +258,17 @@ html {
   display: flex;
   justify-content: space-between;
 }
+@media screen and (max-width: 360px) {
+  .supernav__wrapper {
+    display: none;
+  }
+}
 .supernav__list {
   margin-top: 25px;
   font-size: 16px;
   font-family: "Rubik", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: bold;
-  color: black;
+  color: rgb(34, 34, 34);
 }
 .supernav__list:hover {
   color: orangered;
@@ -208,8 +280,9 @@ html {
   width: 100%;
   z-index: -999;
   background-color: white;
-  background-image: url(../src/images/group.svg);
+  background-image: url("../src/images/group.svg");
   background-repeat: no-repeat;
+  background-size: cover;
   background-size: 100%;
 }
 .main__info {
@@ -221,5 +294,30 @@ html {
   font-size: 48px;
   font-family: "Rubik", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: bold;
-  color: black;
+  color: rgb(68, 68, 68);
+}
+@media screen and (max-width: 768px) {
+  .main {
+    background-size: cover;
+  }
+  .main__main-text {
+    font-size: 24px;
+  }
+  .main__ad-image {
+    width: 198px;
+    height: 132px;
+  }
+}
+@media screen and (max-width: 360px) {
+  .main {
+    display: flex;
+    justify-content: center;
+    height: 80px;
+  }
+  .main__main-text {
+    font-size: 18px;
+  }
+  .main__ad-image {
+    display: none;
+  }
 }/*# sourceMappingURL=style.css.map */
